<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="315dp"
    android:layout_height="310dp"
    android:minWidth="315dp"
    android:minHeight="310dp">

    <TextView
        android:id="@+id/dialog_choose_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_choose_date_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/dialog_choose_date_hint"
        app:layout_constraintBottom_toTopOf="@id/dialog_choose_date_hint"
        style="@style/StorageHelper.TextView.Titles"/>

    <TextView
        android:id="@+id/dialog_choose_date_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/dialog_choose_date_hint"
        app:layout_constraintTop_toBottomOf="@id/dialog_choose_date_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dialog_choose_date_year_selector" />

    <TextView
        android:id="@+id/dialog_choose_date_year_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_gravity="center"
        android:text="@string/year_hint"
        app:layout_constraintTop_toTopOf="@id/dialog_choose_date_year_selector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_choose_date_year_selector"
        app:layout_constraintBottom_toBottomOf="@id/dialog_choose_date_year_selector"
        style="@style/StorageHelper.TextView.Hints"/>

    <NumberPicker
        android:id="@+id/dialog_choose_date_year_selector"
        android:layout_width="40dp"
        android:layout_height="80dp"
        android:theme="@style/NumberPickerTheme"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintTop_toBottomOf="@id/dialog_choose_date_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dialog_choose_date_month_selector"
        app:layout_constraintBottom_toTopOf="@id/dialog_choose_date_checkbox"/>

    <TextView
        android:id="@+id/dialog_choose_date_month_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_gravity="center"
        android:text="@string/month_hint"
        app:layout_constraintTop_toTopOf="@id/dialog_choose_date_month_selector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_choose_date_month_selector"
        app:layout_constraintBottom_toBottomOf="@id/dialog_choose_date_month_selector"
        style="@style/StorageHelper.TextView.Hints"/>

    <NumberPicker
        android:id="@+id/dialog_choose_date_month_selector"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:theme="@style/NumberPickerTheme"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintTop_toBottomOf="@id/dialog_choose_date_hint"
        app:layout_constraintLeft_toRightOf="@id/dialog_choose_date_year_selector"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dialog_choose_date_checkbox" />

    <CheckBox
        android:id="@+id/dialog_choose_date_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/dialog_choose_date_checkbox_hint"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/dialog_choose_date_year_hint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dialog_choose_date_guideline"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dialog_choose_date_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp"/>

    <Button
        android:id="@+id/dialog_choose_date_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_cancel"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dialog_choose_date_submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/StorageHelper.Button.TextButton.Colored.SecondaryColor" />

    <Button
        android:id="@+id/dialog_choose_date_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="12dp"
        android:text="@string/button_submit"
        app:layout_constraintLeft_toRightOf="@id/dialog_choose_date_cancel_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/StorageHelper.Button.TextButton.Colored.SecondaryColor" />
</androidx.constraintlayout.widget.ConstraintLayout>