<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="400dp"
    android:minWidth="320dp"
    android:minHeight="400dp">

    <TextView
        android:id="@+id/dialog_choose_items_from_storage_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/dialog_choose_items_from_storage_title"
        style="@style/StorageHelper.TextView.Titles"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/dialog_choose_items_from_storage_hint"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_choose_items_from_storage_hint"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_choose_items_from_storage_items_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="6dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/dialog_choose_items_from_storage_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dialog_choose_items_from_storage_cancel_button"/>

    <Button
        android:id="@+id/dialog_choose_items_from_storage_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_cancel"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dialog_choose_items_from_storage_submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/StorageHelper.Button.TextButton.Colored.SecondaryColor" />

    <Button
        android:id="@+id/dialog_choose_items_from_storage_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="12dp"
        android:text="@string/button_add"
        app:layout_constraintLeft_toRightOf="@id/dialog_choose_items_from_storage_cancel_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/StorageHelper.Button.TextButton.Colored.SecondaryColor" />
</androidx.constraintlayout.widget.ConstraintLayout>