<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.StorageFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_storage_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        app:title="Склад"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="end">

            <ImageButton
                android:id="@+id/fragment_storage_add_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="3dp"
                android:src="@drawable/icon_entry_editor_toolbar_button_add_item"
                android:contentDescription="@null"
                style="@style/StorageHelper.Button.ImageButton"/>

            <ToggleButton
                android:id="@+id/fragment_storage_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textOn="@string/button_done"
                android:textOff="@string/button_edit"
                style="@style/StorageHelper.Button.ToggleButton"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/fragment_storage_top_linear_layout"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/fragment_storage_toolbar"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/fragment_storage_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/fragment_storage_checkbox"
            style="@style/StorageHelper.TextView.Hints"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_storage_items_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/fragment_storage_top_linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>